# edu-github-fast-search

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h
